--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  password_field_validator:
+    path: ../
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
